--- a/index.html
+++ b/index.html
@@ -88,13 +88,18 @@
     <hr>
 
     <h2>@section</h2>
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h3>
+                <p>This will have white background</p>
+        </div>
     </section>
-    <section>
-        <h3>grey section</h3>
-        <p>This will have grey background</p>
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>off-white section</h3>
+                <p>This will have grey background</p>
+        </div>
     </section>
     
     <hr>
