--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <h2>@container</h2>
     <h3>fluid container</h3>
-    <div class = "container">This is a fluid container and it will go till the end of the page</div>
+    <div class="container">This is a fluid container and it will go till the end of the page</div>
     <h3>center container</h3>
-    <div class = "container container-center">This is a centered container and it will go till the specified width</div>
+    <div class="container container-center">This is a centered container and it will go till the specified width</div>
 
     <hr>
 
@@ -105,11 +105,19 @@
     <hr>
 
     <h2>@footer</h2>
-    <footer>
-        <div>some small heading inside footer</div>
-        <ul>
-            <li>socialOne</li>
-            <li>socialTwo</li>
+    <footer class="footer">
+        <div class="footer-header">some small heading inside footer</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">socialOne</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">socialTwo</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">socialThree</a>
+            </li>
+            
         </ul>
 
     </footer>
